Enable RPC access via WorkerEntrypoint export
- Export AdGeneratorEntrypoint as named export for RPC access
- Add service binding configuration example in wrangler.toml
- Create example-usage.md showing how other Workers can use this service
- Maintain small file structure while enabling proper RPC functionality

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,3 +8,9 @@ DEFAULT_AD_COUNT = "3"
 MAX_AD_COUNT = "10"
 DEFAULT_IMAGE_STYLE = "REALISTIC"
 DEFAULT_IMAGE_QUALITY = "HIGH"
+
+# To use this Worker as a service binding in another Worker, add:
+# [[services]]
+# binding = "AD_GENERATOR"
+# service = "ad-generator"
+# entrypoint = "AdGeneratorEntrypoint"
