Add service bindings configuration
- Add PERSONA_GENERATOR binding to persona-generator-prod
- Add IMAGE_GENERATOR binding to image-generator-api
- Add TEXT_GENERATOR binding to creative-text-generator
- Configure proper service bindings for RPC communication
- Ready for deployment when target services are available

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,21 @@
 name = "ad-generator"
 main = "src/index.ts"
 compatibility_date = "2024-01-15"
+account_id = "a872f67a3331071736867b65a7c92f03"
+
+# Service bindings to existing generators
+[[services]]
+binding = "PERSONA_GENERATOR"
+service = "persona-generator-prod"
+entrypoint = "PersonaGeneratorEntrypoint"
+
+[[services]]
+binding = "IMAGE_GENERATOR"
+service = "image-generator-api"
+
+[[services]]
+binding = "TEXT_GENERATOR"
+service = "creative-text-generator"
 
 # Environment variables for configuration
 [vars]
