--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022", "DOM", "WebWorker"],
+    "lib": ["ES2022"],
     "module": "ES2022",
     "moduleResolution": "node",
     "types": ["@cloudflare/workers-types"],
